--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,13 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env
 # vercel
 .vercel
+
+#history
+/.history/
+
+
+#package-lock
+package-lock.json
